# opticssim

./: .gitignore  CMakeLists.txt  README  block.cpp  block.h  clock.cpp  clock.h  concavesphere.cpp  concavesphere.h  concavespheremirror.h  constant.cpp  constant.h  convexsphere.cpp  convexsphere.h  convexspheremirror.h  invalid_tsvector.cpp  invalid_tsvector.h  light.h  line.cpp  line.h  main.h  makefile  material.h  mirror.cpp  mirror.h  object.cpp  object.h  photon.cpp  photon.h  qed.cpp  qed.h  source.cpp  source.h  sphere.cpp  sphere.h  test_block.cpp  test_concavesphere.cpp  test_convexsphere.cpp  test_qed.cpp  tsmatrix.cpp  (+4 more)
